<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:id="@+id/Username"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_server_endpoint"
        android:inputType="textUri"
        android:key="fido_server_endpoint"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_endpoint" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_reg_op_request"
        android:inputType="textUri"
        android:key="fido_reg_request"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reg_op_request" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_reg_op_response"
        android:inputType="textUri"
        android:key="fido_reg_response"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reg_op_response" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_auth_op_request"
        android:inputType="textUri"
        android:key="fido_auth_request"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_auth_op_request" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_auth_op_response"
        android:inputType="textUri"
        android:key="fido_auth_response"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_auth_op_response" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_dereg_op_request"
        android:inputType="textUri"
        android:key="fido_dereg_request"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_degreg_op_request" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_whitelisting_uuid"
        android:inputType="textUri"
        android:key="fido_whitelisting_uuid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_whitelisting_uuid" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_whitelisting_facetid"
        android:inputType="textUri"
        android:key="fido_whitelisting_facetid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_whitelisting_facetid" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
